# Cheetah-Software

./: CMakeLists.txt
common/include/: cppTypes.h
common/include/ControlParameters/: SimulatorParameters.h
common/include/Dynamics/: Stoch.h
common/src/Controllers/: LegController.cpp
common/test/: test_LegController.cpp  test_actuatorModel.cpp  test_footswing.cpp  test_stoch_model.cpp
qtgamepad/: CMakeLists.txt
qtgamepad/src/gamepad/: qgamepad.h  qgamepadbackend_p.h  qgamepadbackendfactory_p.h  qgamepadbackendplugin_p.h  qgamepadkeynavigation.cpp  qgamepadkeynavigation.h  qgamepadmanager.h
robot/include/: HardwareBridge.h  SimulationBridge.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  main_helper.cpp
sim/include/: DrawList.h  Graphics3D.h  SimControlPanel.h  Simulation.h
sim/src/: DrawList.cpp  Graphics3D.cpp  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  main.cpp
user/MIT_Controller/Controllers/BackFlip/: DataReader.cpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp
user/MIT_Controller/FSM_States/: FSM_State_Locomotion.cpp  FSM_State_StandUp.cpp  SafetyChecker.cpp
